<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userInformation"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/navbar_account_details" />
        <item
            android:id="@+id/nav_customizeProfile"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/navbar_customize_profile" />
        <item
            android:id="@+id/nav_monitoring"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/navbar_monitor" />
        <item
            android:id="@+id/nav_monitored_by"
            android:icon="@drawable/ic_people_outline_black_24dp"
            android:title="@string/navbar_monitorby" />
        <item
            android:id="@+id/nav_createGroup"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/new_group" />
        <item
            android:id="@+id/nav_parent_dashboard_toggle"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/show_parent_dashboard_parent" />
        <item
            android:id="@+id/nav_leaderBoard"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/leader_board" />
        <item
            android:id="@+id/nav_permission_dashboard"
            android:icon="@drawable/places_ic_search"
            android:title="@string/Permission_sidebar_title"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>
