<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInformationActivity">


    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toTopOf="@+id/UserInformation_Button_Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_nameLabel" />

            <EditText
                android:id="@+id/UserInformation_EditText_NameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Info_Name"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_BirthYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_yearLabel" />

            <EditText
                android:id="@+id/UserInformation_EditText_BirthYearField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Info_year"
                android:inputType="date" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_BirthMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_monthLabel" />

            <Spinner
                android:id="@+id/UserInformation_Spinner_BirthMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_emailLabel" />

            <EditText
                android:id="@+id/UserInformation_EditText_EmailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Info_email"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_HomePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_home_phoneLabel" />

            <EditText
                android:id="@+id/UserInformation_EditText_HomePhoneField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Info_home_phone"
                android:inputType="phone" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_CellPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_cell_phoneLabel" />

            <EditText
                android:id="@+id/UserInformation_EditText_CellPhoneField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Info_cell_phone"
                android:inputType="phone" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_addressLabel" />

            <EditText
                android:id="@+id/UserInformation_EditText_AddressField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Info_address"
                android:inputType="textPostalAddress" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_Grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_current_ngradeLabel" />

            <EditText
                android:id="@+id/UserInformation_EditText_GradeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Info_current_grade_student"
                android:inputType="textNoSuggestions" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_TeacherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_teacher_s_nnameLabel" />

            <EditText
                android:id="@+id/UserInformation_EditText_TeacherNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Info_teacher_s_name_student"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInformation_TextView_EmergencyContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Info_emergency_ncontactLabel" />

            <EditText
                android:id="@+id/UserInformation_EditText_EmergencyContactField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Info_emergency_contact"
                android:inputType="textCapSentences|textMultiLine" />

        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/UserInformation_Button_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/UserInformation_Button_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>